# aei5-midterm

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  start.sh
rag_service/: config.py  data_loader.py  evaluate.py  fine_tune_embeddings.py  rag_pipeline.py  synthetic_data.py  synthetic_data_old.py  test_env.py
streamlit/: app.py
